Remove comments and separate threads